pod-info-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pod-info
    namespace: staging
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=staging,Team=lil
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: pod-info
                port: 80
